# action_test

./: PEQ1.py  README.md  hello.py  peq_1.py  pyproject.toml
.github/workflows/: RunTestsWithPytest.yml
tests/: test_PEQ1.py  test_hello.py  test_peq_1.py
