[tool.poetry]
name = "sample_github_actions"
version = "0.1.0"
description = ""
authors = ["kabaksh0507 <kabashmk0705@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
